fixes on alignment

--- a/components/Card/AssignQuizCard/assignQuizCard.module.css
+++ b/components/Card/AssignQuizCard/assignQuizCard.module.css
@@ -21,8 +21,8 @@
 
 .textWrap{
     display: flex;
-    align-items: flex-start;
-    gap: 8px;
+    align-items: center;
+    gap: 16px;
 }
 
 .detailWrap{
